# vasm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: conventions.md  plan.md  plan_v2.md
examples/: ch01_smoke.asm  ch02_first_mov.asm  ch03_mem_access.asm  ch04_first_program.asm  ch07_addressing.asm  ch08_data_dup.asm  ch11_cmp_jne.asm  ch12_int_div_zero.asm  ch13_hello.asm  ch14_port_in.asm  ch17_disk_boot.asm  m2_multi_segment.asm  m2_sum_loop.asm  m4_call_ret.asm  m5_bios_video.asm  m5_echo.asm  m6_disk_boot.asm  m6_jump_table.asm
src/: cli.rs  encoding.rs  lib.rs  main.rs  theme.rs
src/app/: editor.rs  event.rs  keymap.rs  mod.rs
src/asm/: ast.rs  diagnostics.rs  lexer.rs  mod.rs  parser.rs
src/ui/: highlight.rs  mod.rs
src/ui/panes/: call_stack.rs  console.rs  diagnostic.rs  explain.rs  flags.rs  keymap.rs  memory.rs  mod.rs  prompt.rs  registers.rs  segments.rs  source.rs  stack.rs  status.rs
src/vm/: mod.rs
tests/: parser_snapshot.rs  ui_render.rs  vm_run.rs
tests/fixtures/: m1_addressing.asm  m1_basic.asm  m1_data.asm  m1_errors.asm  m1_expr.asm  m1_int.asm  m1_jumps.asm  m1_loop.asm  m1_multi_segment.asm
tests/snapshots/: parser_snapshot__addressing.snap  parser_snapshot__basic.snap  parser_snapshot__crlf_line_endings_are_accepted.snap  parser_snapshot__data.snap  parser_snapshot__errors.snap  parser_snapshot__expr.snap  parser_snapshot__int_21h.snap  parser_snapshot__jumps.snap  parser_snapshot__loop_chapter.snap  parser_snapshot__multi_segment.snap
(+20 files in other folders)
